--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "chalk": "^2.0.1",
     "cross-spawn": "^5.1.0",
+    "fs-extra": "^4.0.0",
     "husky": "^0.14.3",
-    "mri": "^1.1.0"
+    "mri": "^1.1.0",
+    "pify": "^3.0.0"
   },
   "scripts": {
-    "postcommit": "bu start --path=/Users/Roy/Documents/monkindey/backup"
+    "postcommit": "bu start --path=undefined"
   }
 }
